--- a/shift-check/index.html
+++ b/shift-check/index.html
@@ -11,12 +11,13 @@
 
 <body>
     <div>
+        <h3>Shift checkboxes</h3>
         <ul>
-            <li class="item"><input type="checkbox"> </li>
-            <li class="item"><input type="checkbox"> </li>
-            <li class="item"><input type="checkbox"> </li>
-            <li class="item"><input type="checkbox"> </li>
-            <li class="item"><input type="checkbox"> </li>
+            <li class="item"><input type="checkbox"> <label for="">White</label></li>
+            <li class="item"><input type="checkbox"> <label for="">Red</label> </li>
+            <li class="item"><input type="checkbox"> <label for="">Black</label></li>
+            <li class="item"><input type="checkbox"> <label for="">Blue</label></li>
+            <li class="item"><input type="checkbox"> <label for="">green</label></li>
         </ul>
     </div>
 
